1904.	[bug]		A escaped character is, potentially, converted to
			the output character set too early. [RT #14666]

1902.	[port]		Use uintptr_t if available. [RT #14606]

1898.	[port]		sunos: non blocking i/o support. [RT #14951]

1896.	[bug]		The cache could delete expired records too fast for
			clients with a virtual time in the past. [RT #14991]

1895.	[bug]		fctx_create() could return success even though it
			failed. [RT #14993]

1893.	[cleanup]	dighost.c: move external declarations into <dig/dig.h>.

1892.	[bug]		dnssec-signzone, dnssec-keygen: handle negative debug
			levels. [RT #14962]

1890.	[func]		Add a system test for named-checkconf. [RT #14931]

1886.	[bug]		Fix unreasonably low quantum on call to
			dns_rbt_destroy2().  Remove unnecessay unhash_node()
			call. [RT #14919]

1884.	[bug]		process_dhtkey() was using the wrong memory context
			to free some memory. [RT #14890]

1883.	[port]		sunos: portability fixes. [RT #14814]

1882.	[port]		win32: isc__errno2result() now reports its caller.
			[RT #13753]

1881.	[port]		win32: Handle ERROR_NETNAME_DELETED.  [RT #13753]

1867.	[bug]		It was possible to trigger a INSIST in
			dlv_validatezonekey(). [RT #14846]

1866.	[bug]		resolv.conf parse errors were being ignored by
			dig/host/nslookup. [RT #14841]

1865.	[bug]		Silently ignore nameservers in /etc/resolv.conf with
			bad addresses. [RT #14841]

1864.	[bug]		Don't try the alternative transfer source if you
			got a answer / transfer with the main source
			address. [RT #14802]

1863.	[bug]		rrset-order "fixed" error messages not complete.

1861.	[bug]		dig could trigger a INSIST on certain malformed
			responses. [RT #14801]

1860.	[port]		solaris 2.8: hack_shutup_pthreadmutexinit was
			incorrectly set. [RT #14775]

1858.	[bug]		The flush-zones-on-shutdown option wasn't being
			parsed. [RT #14686]

1857.	[bug]		named could trigger a INSIST() if reconfigured /
			reloaded too fast.  [RT #14673]
